Update ProductService.java