@@ -5,79 +5,89 @@ import ar.com.gg.proyectoIntegrador.dto.ProductResponseDTO;
 import ar.com.gg.proyectoIntegrador.entity.Product;
 import ar.com.gg.proyectoIntegrador.exception.ProductNotFoundException;
 import ar.com.gg.proyectoIntegrador.repository.ProductRepository;
-import org.springframework.beans.BeanUtils;
+import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductService {
 
     private final ProductRepository repository;
+    private final ModelMapper modelMapper;
 
-    public ProductService(ProductRepository repository) {
+    @Autowired
+    public ProductService(ProductRepository repository, ModelMapper modelMapper) {
         this.repository = repository;
+        this.modelMapper = modelMapper;
     }
 
+    // Crear un nuevo producto
     public ProductResponseDTO createProduct(ProductRequestDTO productRequestDTO) {
-        Product product = new Product();
-        BeanUtils.copyProperties(productRequestDTO, product);
-
+        Product product = modelMapper.map(productRequestDTO, Product.class);
         this.repository.save(product);
-
-        ProductResponseDTO productResponseDTO = new ProductResponseDTO();
-        BeanUtils.copyProperties(product, productResponseDTO);
-        return productResponseDTO;
+        return modelMapper.map(product, ProductResponseDTO.class);
     }
 
-    public List<ProductResponseDTO> getProducts() {
+    // Obtener todos los productos (sin paginación)
+    /*public List<ProductResponseDTO> getProducts() {
         return this.repository.findAll()
                 .stream()
-                .map(this::mapperToDTO)
-                .toList();
+                .map(product -> modelMapper.map(product, ProductResponseDTO.class))
+                .collect(Collectors.toList());
+    }*/
+
+    public List<ProductResponseDTO> getProducts() {
+        List<Product> products = this.repository.findAll();
+        System.out.println("Productos recuperados: " + products.size());  // Agrega este log
+
+        return products.stream()
+                .map(product -> modelMapper.map(product, ProductResponseDTO.class))
+                .collect(Collectors.toList());
     }
 
+
+    public ProductResponseDTO searchProductById(Long id) {
+        return this.repository.findById(id)
+                .map(this::mapperToDTO)
+                .orElseThrow(() -> new ProductNotFoundException(id.toString()));
+    }
+
+    // Buscar productos por nombre (sin paginación)
     public List<ProductResponseDTO> searchProductByName(String queryName) {
         List<Product> foundProducts = this.repository.findByNameContainingIgnoreCase(queryName);
 
         if (foundProducts.isEmpty()) {
-            throw new ProductNotFoundException(queryName);
+            throw new ProductNotFoundException("No se encontraron productos con el nombre: " + queryName);
         }
 
-        return foundProducts
-                .stream()
+        return foundProducts.stream()
                 .map(this::mapperToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public ProductResponseDTO searchProductById(Long id) {
-        Product product = this.repository.findById(id)
-                .orElseThrow(() -> new ProductNotFoundException(id.toString()));
-
-        return this.mapperToDTO(product);
-    }
-
+    // Actualizar un producto existente
     public ProductResponseDTO updateProduct(Long id, ProductRequestDTO productRequestDTO) {
         Product product = this.repository.findById(id)
-                .orElseThrow(() -> new ProductNotFoundException(id.toString()));
-        BeanUtils.copyProperties(productRequestDTO, product);
+                .orElseThrow(() -> new ProductNotFoundException("Producto con ID " + id + " no encontrado"));
 
+        modelMapper.map(productRequestDTO, product);
         this.repository.save(product);
-
-        return this.mapperToDTO(product);
+        return modelMapper.map(product, ProductResponseDTO.class);
     }
 
-    public ProductResponseDTO deleteProduct(Long id) {
-        Product product = this.repository.findById(id)
-                .orElseThrow(() -> new ProductNotFoundException(id.toString()));
-        this.repository.delete(product);
-
-        return this.mapperToDTO(product);
+    // Eliminar un producto
+    public void deleteProduct(Long id) {
+        if (!this.repository.existsById(id)) {
+            throw new ProductNotFoundException("Producto con ID " + id + " no encontrado");
+        }
+        this.repository.deleteById(id);
     }
 
     private ProductResponseDTO mapperToDTO(Product product) {
-        ProductResponseDTO dto = new ProductResponseDTO();
-        BeanUtils.copyProperties(product, dto);
-        return dto;
+        return modelMapper.map(product, ProductResponseDTO.class);
     }
+
 }
